<?xml version="1.0"?>
<package>
  <name>custom_msgs</name>
  <version>1.0.0</version>
  <description>
    This package defines messages my custom messages
  </description>
  <maintainer email="nima.en@gmail.com">Nima Enayati</maintainer>
  <license>BSD</license>

  <url>http://ros.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
